--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -6,3 +6,6 @@ jobs:
     steps:
       - name: Run a simple echo command
         run: echo "Wow! I am able to echo from Github"
+      - name: Run python command
+        run: print(f"Sum of 2 and 2 is {2+2}")
+        shell: python
