--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -7,5 +7,5 @@ jobs:
       - name: Run a simple echo command
         run: echo "Wow! I am able to echo from Github"
       - name: Run python command
-        run: print(f"Sum of 2 and 2 is {2+2}")
-        shell: Directory
+        run: Directory
+        shell: pwsh
