--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -5,5 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run a simple echo command
-        run: print(f"Sum of 2 and 2 is {2+2}")
+        run: |
+          sum_var = 2+2
+          for _ in range(10):
+            print(f"Sum of 2 and 2 is {sum_var}")
         shell: python
