--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -5,5 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run a simple command
-        run: print(f"Sum of 2 and 2 is {2+2}")
+        run: |
+          import random
+          for _ in range(5):
+            print(f"A random integer is {random.randint()}")
         shell: python
