--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -6,7 +6,6 @@ jobs:
     steps:
       - name: Run a simple command
         run: |
-          import random
           for _ in range(5):
-            print(f"A random integer is {random.randint(1, 100)}")
+            print(f"Sum of 2 and 2 is {2+2}")
         shell: python
