--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - name: Run a simple command
         run: |
-          for _ in range(5):
-            print(f"Sum of 2 and 2 is {2+2}")
-        shell: python
+          Get-Location
+          Write-Output "Hello from Powershell!"
+        shell: pwsh
