--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run a simple command
-        run: echo "Wow! I am able to echo from Github Actions!"
+        run: |
+          echo "Output of ls is:"
+          ls -al
