--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -4,7 +4,15 @@ jobs:
   cool_first_job:
     runs-on: ubuntu-latest
     steps:
-      - name: LS Output
+      - name: LS Output before checkout
+        run: |
+          echo "Output of LS is:"
+          ls -al
+          
+      - name: Checkout the repo
+        uses: actions/checkout@v3
+
+      - name: LS Output after checkout
         run: |
           echo "Output of LS is:"
           ls -al
