--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -8,7 +8,7 @@ jobs:
         run: |
           echo "Output of LS is:"
           ls -al
-          
+
       - name: Checkout the repo
         uses: actions/checkout@v3
 
@@ -16,3 +16,4 @@ jobs:
         run: |
           echo "Output of LS is:"
           ls -al
+          less README.md
