--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -4,16 +4,5 @@ jobs:
   cool_first_job:
     runs-on: ubuntu-latest
     steps:
-      - name: LS Output before checkout
-        run: |
-          echo "Output of LS is:"
-          ls -al
-
-      - name: Checkout the repo
-        uses: actions/checkout@v3
-
-      - name: LS Output after checkout
-        run: |
-          echo "Output of LS is:"
-          ls -al
-          less README.md
+      - name: Run a simple command
+        run: echo "Wow! I am able to echo from Github Actions!"
