--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -4,5 +4,5 @@ jobs:
   cool_first_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a simple command
-        run: echo "Wow! I am able to echo from Github Actions!"
+      - name: LS Output
+        run: ls
