--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -4,9 +4,5 @@ jobs:
   cool_first_job:
     runs-on: ubuntu-latest
     steps:
-      - name: LS Output before checkout
-        run: ls
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: LS Output after checkout
-        run: ls
+      - name: echo a simple command
+        run: echo "Hello from Github Actions!"
