--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,8 +1,18 @@
 name: Super Cool Workflow
-on: push 
+on: push
+env:
+  continent: "Europe"
 jobs:
   cool_first_job:
     runs-on: ubuntu-latest
+    env:
+      country: "Germany"
     steps:
-      - name: echo a simple command
-        run: echo "Hello from Github Actions!"
+      - name: Step-1
+        run: echo "I am in $city, $country, $continent"
+        env:
+          city: "Berlin"
+      - name: Step-2
+        run: echo "I am in $city, $country, $continent"
+        env:
+          city: "Munich"
