--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -9,12 +9,8 @@ jobs:
       country: "Germany"
     steps:
       - name: Step-1
-        run: |
-          echo "country=France" >> $GITHUB_ENV
-          echo "I am in $city, $country, $continent"
+        run: echo "I am in $city, $country, $continent"
         env:
           city: "Berlin"
       - name: Step-2
         run: echo "I am in $city, $country, $continent"
-        env:
-          city: "Munich"
