--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step-1
-        run: echo "I am in $city, $country, $continent"
+        run: echo "Hello from Github Actions!"
