--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -9,8 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step-1
-        env:
-          city: Berlin
-        run: echo "I am in $city, $country, $continent"
-      - name: Step-2
-        run: echo "I am in $city, $country, $continent"
+        run: echo "Hello from Github Actions"
