--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,8 +1,14 @@
 name: Super Cool Workflow
 on: push
+env:
+  continent: Europe
 jobs:
   cool_first_job:
+    env:
+      country: Germany
     runs-on: ubuntu-latest
     steps:
       - name: Step-1
-        run: echo "Hello from Github Actions"
+        env:
+          city: Berlin
+        run: echo "I am in $city, $country, $continent"
