--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -12,3 +12,5 @@ jobs:
         env:
           city: Berlin
         run: echo "I am in $city, $country, $continent"
+      - name: Step-2
+        run: echo "I am in $city, $country, $continent"
